<resources>
    <string name="app_name">LeemChat</string>
    <!--    <string name="title_activity_login">LoginActivity</string>-->
    <!--    <string name="prompt_email">Email</string>-->
    <!--    <string name="prompt_password">Password</string>-->
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <!--    <string name="welcome">"Welcome !"</string>-->
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <!--    <string name="invalid_password">Password must be >5 characters</string>-->
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">"Sign in"</string>
    <string name="email">"Email"</string>
    <string name="password">"Password"</string>
    <string name="dont_have_acc">"Don't have an account?"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid">Invalid email!</string>
    <string name="sign_in_fail">Failed sign in</string>
    <string name="sign_in_done">Success sign in</string>
    <string name="sign_in_pass_error">Password must contain a minimum 8 characters in length</string>

    <string name="user_name">User name</string>
    <string name="create_pass">Create password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="have_acc">Do you have an account?</string>

    <string name="sign_up_fail">Failed registration</string>
    <string name="sign_up_done">Success registration</string>
    <string name="auth_fail">Authentication failed</string>

    <string name="name_empty">Name cannot be empty</string>
    <string name="name_small">Name is small</string>
    <string name="name_long">Name is long</string>

    <string name="pass_lenght_check">Password must containt a minimum of 8 characters in length</string>
    <string name="pass_num_check">Password must contain a minimum of 1 numeric character</string>
    <string name="pass_upper_check">Password must contain a minimum of 1 upper case letter</string>
    <string name="pass_lower_check">Password must contain a minimum of 1 lower case letter</string>
    <string name="pass_wspace_check">Password cannot contain whitespace</string>
    <string name="pass_conf_check">Password mismatch</string>

    <string name="hello">Hello</string>
    <string name="you">You: </string>

    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>

    <string name="message">Message</string>

    <string name="friends_list_empty">Your friends list is empty\nClick the button below to search for friends</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="copy">Message copied</string>
</resources>