<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_leemchat"
    tools:context=".activity.RegistrationActivity"
    android:transitionName="btn_login">

    <TextView
        android:transitionName="sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />


<!--    <TextView-->
<!--        android:id="@+id/tv_sign_up"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/poetsenone"-->
<!--        android:text="Sign up"-->
<!--        android:textColor="#4E9F3D"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.440" />-->


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_user_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="55dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintVertical_bias="0.390"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_user_photo"/>

        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/card_view_user_photo"
        android:paddingHorizontal="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/TextInputLayout.OutlinedBox.CustomFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/user_name"
            app:boxStrokeColor="@color/green_600">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLength="20"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/TextInputLayout.OutlinedBox.CustomFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/green_600"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_create_pass"
            style="@style/TextInputLayout.OutlinedBox.CustomFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:hint="@string/create_pass"
            app:boxStrokeColor="@color/green_600"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?android:textColorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_pass"
            style="@style/TextInputLayout.OutlinedBox.CustomFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:hint="@string/confirm_pass"
            app:boxStrokeColor="@color/green_600"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?android:textColorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


<!--    <EditText-->
<!--        android:id="@+id/et_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="40dp"-->
<!--        android:background="@drawable/bg_edit_text"-->
<!--        android:drawableLeft="@drawable/ic_baseline_email_24"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:fontFamily="@font/texpisans_light"-->
<!--        android:hint="Email"-->
<!--        android:padding="10dp"-->
<!--        android:textColorHighlight="@color/lime_200"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.603" />-->

<!--    <EditText-->
<!--        android:id="@+id/et_name"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="40dp"-->
<!--        android:background="@drawable/bg_edit_text"-->
<!--        android:drawableLeft="@drawable/ic_baseline_account_circle_24"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:fontFamily="@font/texpisans_light"-->
<!--        android:hint="User name"-->
<!--        android:padding="10dp"-->
<!--        android:textColorHighlight="@color/lime_200"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.52" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/bg_sign_in_btn"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintVertical_bias="0.150" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_registration"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/have_acc"
            android:textColor="@color/green_600"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="637dp" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:transitionName="sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/sign_in"
            android:textColor="@color/green_900"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="637dp" />

    </LinearLayout>

<!--    <EditText-->
<!--        android:id="@+id/et_create_pass"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="40dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:background="@drawable/bg_edit_text"-->
<!--        android:drawableLeft="@drawable/ic_baseline_lock_24"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:fontFamily="@font/texpisans_light"-->
<!--        android:hint="Create password"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/et_email" />-->

<!--    <EditText-->
<!--        android:id="@+id/et_confirm_pass"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="40dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:background="@drawable/bg_edit_text"-->
<!--        android:drawableLeft="@drawable/ic_baseline_lock_24"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:fontFamily="@font/texpisans_light"-->
<!--        android:hint="Confirm password"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/et_create_pass" />-->


</androidx.constraintlayout.widget.ConstraintLayout>